// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate map for > project with external links in toc 1`] = `
"{
	"files": [
		"ru/",
		"ru/folder1/a1",
		"ru/folder1/folder2/a1",
		"ru/plugins/",
		"ru/project/",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with external links in toc 2`] = `
{
  "fileTrie": {
    "tocMapping": {
      "t0": "ru/toc.yaml",
    },
    "trie": {
      "ru": {
        "children": {
          "folder1": {
            "children": {
              "a1": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
              "folder2": {
                "children": {
                  "a1": {
                    "file": {
                      "ext": ".md",
                      "toc": "t0",
                    },
                  },
                },
              },
            },
          },
          "index": {
            "file": {
              "ext": ".md",
              "toc": "t0",
            },
          },
          "plugins": {
            "children": {
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
            },
          },
          "project": {
            "children": {
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
            },
          },
          "settings": {
            "file": {
              "ext": ".md",
              "toc": "t0",
            },
          },
        },
      },
    },
  },
  "redirects": {},
  "yfmConfig": {},
}
`;

exports[`Generate map for > project with multiple language 1`] = `
"{
	"files": [
		"en/",
		"en/plugins/",
		"en/plugins/import",
		"en/project/",
		"en/project/config",
		"en/settings",
		"ru/",
		"ru/plugins/",
		"ru/plugins/import",
		"ru/project/",
		"ru/project/config",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with multiple language 2`] = `
{
  "fileTrie": {
    "tocMapping": {
      "t0": "en/toc.yaml",
      "t1": "ru/toc.yaml",
    },
    "trie": {
      "en": {
        "children": {
          "index": {
            "file": {
              "ext": ".md",
              "toc": "t0",
            },
          },
          "plugins": {
            "children": {
              "import": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
            },
          },
          "project": {
            "children": {
              "config": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
            },
          },
          "settings": {
            "file": {
              "ext": ".md",
              "toc": "t0",
            },
          },
        },
      },
      "ru": {
        "children": {
          "index": {
            "file": {
              "ext": ".md",
              "toc": "t1",
            },
          },
          "plugins": {
            "children": {
              "import": {
                "file": {
                  "ext": ".md",
                  "toc": "t1",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "t1",
                },
              },
            },
          },
          "project": {
            "children": {
              "config": {
                "file": {
                  "ext": ".md",
                  "toc": "t1",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "t1",
                },
              },
            },
          },
          "settings": {
            "file": {
              "ext": ".md",
              "toc": "t1",
            },
          },
        },
      },
    },
  },
  "redirects": {},
  "yfmConfig": {},
}
`;

exports[`Generate map for > project with single language and toc include - only md2html 1`] = `
"{
	"files": [
		"ru/",
		"ru/folder1/a1",
		"ru/folder1/folder2/a1",
		"ru/plugins/",
		"ru/plugins/import",
		"ru/project/",
		"ru/project/config",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with single language and toc include - only md2html 2`] = `
{
  "fileTrie": {
    "tocMapping": {
      "t0": "ru/toc.yaml",
    },
    "trie": {
      "ru": {
        "children": {
          "folder1": {
            "children": {
              "a1": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
              "folder2": {
                "children": {
                  "a1": {
                    "file": {
                      "ext": ".md",
                      "toc": "t0",
                    },
                  },
                },
              },
            },
          },
          "index": {
            "file": {
              "ext": ".md",
              "toc": "t0",
            },
          },
          "plugins": {
            "children": {
              "import": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
            },
          },
          "project": {
            "children": {
              "config": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
            },
          },
          "settings": {
            "file": {
              "ext": ".md",
              "toc": "t0",
            },
          },
        },
      },
    },
  },
  "redirects": {},
  "yfmConfig": {},
}
`;

exports[`Generate map for > project with single language and toc include 1`] = `
"{
	"files": [
		"ru/",
		"ru/folder1/a1",
		"ru/folder1/folder2/a1",
		"ru/plugins/",
		"ru/plugins/import",
		"ru/project/",
		"ru/project/config",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with single language and toc include 2`] = `
{
  "fileTrie": {
    "tocMapping": {
      "t0": "ru/toc.yaml",
    },
    "trie": {
      "ru": {
        "children": {
          "folder1": {
            "children": {
              "a1": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
              "folder2": {
                "children": {
                  "a1": {
                    "file": {
                      "ext": ".md",
                      "toc": "t0",
                    },
                  },
                },
              },
            },
          },
          "index": {
            "file": {
              "ext": ".md",
              "toc": "t0",
            },
          },
          "plugins": {
            "children": {
              "import": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
            },
          },
          "project": {
            "children": {
              "config": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "t0",
                },
              },
            },
          },
          "settings": {
            "file": {
              "ext": ".md",
              "toc": "t0",
            },
          },
        },
      },
    },
  },
  "redirects": {},
  "yfmConfig": {},
}
`;
